# tdo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Justfile  README.md  RELEASE.md  SKILL.md  TODO.md  install.sh  tdo.sh
.claude/skills/tdo/: SKILL.md
.github/workflows/: release.yml
.todo/: 037c-bla.md  067b-add-todo-view-command.md  0d73-5.md  0fcb-add-open-closed-count-header.md  1250-flarb.md  1cf9-f.md  2a83-unneeded-as-well.md  2f27-tui-e-should-also-edit-like-enter.md  3a9d-foo.md  3ae6-new.md  4ba8-make-tui-non-fullscreen.md  4e2d-yarp.md  5595-yeah.md  6e00-error-handling-for-malformed-todo-files.md  6f1c-6.md  7589-4.md  7b22-blorb.md  9a82-filter-in-tui-based-on-hex.md  bb50-dummy-todo-1.md  bb5c-c.md  c6b0-7.md  ca46-d.md  d331-a.md  d6f9-dummy-3.md  dcf2-f.md  e1a3-after-non-fullscreen-leave-previous-output-in-term.md  e238-more-todo-spam.md  fb1f-tui-esc-should-exit.md  fe5b-b.md
src/: cli.rs  main.rs  ops.rs  storage.rs  todo.rs  util.rs
src/tui/: events.rs  mod.rs  ui.rs
tests/: cli.rs
tests/helpers/: mod.rs
