[package]
name = "tdo"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
is-terminal = "0.4"
jiff = { version = "0.2", features = ["serde"] }
rand = "0.10"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
